--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,51 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 5vh;
+  font-size: calc(4px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+*,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-@keyframes App-logo-spin {
+.App-header {
+  width: calc(65px + 2vmin);
+  height: calc(65px + 2vmin);
+  position: relative;
+  background-color: #f1f2f6;
+  opacity: 0.65;
+  border-radius: 20px;
+}
+
+.App-header::after {
+  content: "";
+  position: absolute;
+  width: calc(100% + 7px);
+  height: calc(100% + 7px);
+  background: conic-gradient(#8b23e1, #1909f2, #f218d9, #ee4e0f);
+  background-size: calc(115px + 2vmin);
+  animation-name: rotate;
+  animation: anim 8s linear infinite;
+  border-radius: 25%;
+  filter: blur(1rem);
+  z-index: -2;
+}
+
+@keyframes anim {
   from {
     transform: rotate(0deg);
   }
