--- a/src/App.css
+++ b/src/App.css
@@ -5,51 +5,8 @@
   align-items: center;
 }
 
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5vh;
-  font-size: calc(4px + 2vmin);
-  color: white;
-}
-
-*,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-.App-header {
-  width: calc(65px + 2vmin);
-  height: calc(65px + 2vmin);
-  position: relative;
-  background-color: #f1f2f6;
-  opacity: 0.65;
-  border-radius: 20px;
-}
-
-.App-header::after {
-  content: "";
-  position: absolute;
-  width: calc(100% + 7px);
-  height: calc(100% + 7px);
-  background: conic-gradient(#8b23e1, #1909f2, #f218d9, #ee4e0f);
-  background-size: calc(115px + 2vmin);
-  animation-name: rotate;
-  animation: anim 8s linear infinite;
-  border-radius: 25%;
-  filter: blur(1rem);
-  z-index: -2;
-}
-
-@keyframes anim {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App footer {
+  font-size: 8px;
+  color: #cccccc;
+  margin-top: 50vh;
 }
