--- a/src/Weather.css
+++ b/src/Weather.css
@@ -3,7 +3,7 @@
   justify-content: center;
   gap: 0.5vw;
   padding: 5vh;
-  margin-bottom: 5vh;
+  margin-bottom: 2vh;
 }
 
 .Weather .form-control {
@@ -31,6 +31,9 @@
 .Weather .item:hover {
   color: #8b23e1;
 }
+.item {
+  display: flex;
+}
 
 .Weather ul {
   list-style: none;
@@ -40,4 +43,8 @@
   display: flex;
   flex-direction: row;
   gap: 1vw;
+}
+
+.Weather img {
+  max-width: 10vw;
 }
