--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,8 +2,10 @@
   display: flex;
   justify-content: center;
   gap: 0.5vw;
-  padding: 5vh;
   margin-bottom: 2vh;
+}
+.Weather .search {
+  padding: 5vh;
 }
 
 .Weather .form-control {
@@ -25,10 +27,10 @@
 }
 
 .Weather .item {
-  color: #757575;
+  color: #111349;
 }
 
-.Weather .item:hover {
+.Weather .item-search:hover {
   color: #8b23e1;
 }
 .item {
@@ -45,6 +47,27 @@
   gap: 1vw;
 }
 
+.Weather .Description {
+  color: #111349;
+  font-size: calc(4px + 2vmin);
+  font-weight: 400;
+  text-transform: capitalize;
+  margin-top: 2vh;
+}
+
 .Weather img {
-  max-width: 10vw;
+  max-width: calc(75px + 5vmin);
+}
+
+.Weather .Thermometer {
+  color: #ee4e0f;
+  margin-right: 3px;
+}
+.Weather .Umbrella {
+  color: #8b23e1;
+  margin-right: 3px;
+}
+.Weather .Wind {
+  color: #1909f2;
+  margin-right: 3px;
 }
